feat Redis and Postgres stubs added, minor refactor
