# api.yaml
@@ -6,11 +6,31 @@ info:
 servers:
   - url: 'https://x-bank.alsiberij.com/ms-users/'
 paths:
-  /v1/personal-data:
+  /v1/me:
+    get:
+      summary: Получить пользовательские данные
+      tags:
+        - User data
+      security:
+        - bearerAuth: [ ]
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDataResponse'
+        400:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /v1/me/personal-data:
     get:
       summary: Получить персональные данные
       tags:
-        - Personal data
+        - User data
       security:
         - bearerAuth: [ ]
       responses:
@@ -234,7 +254,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /v1/auth/telegram:
+  /v1/telegram:
     post:
       summary: Привязка телеграмма к пользователю
       tags:
@@ -370,3 +390,30 @@ components:
         - gender
         - liveInCountry
       example: null
+
+    UserDataResponse:
+      type: object
+      nullable: true
+      properties:
+        id:
+          type: integer
+        uuid:
+          type: string
+        login:
+          type: string
+        email:
+          type: string
+        telegramId:
+          type: integer
+          nullable: true
+          example: null
+        createdAt:
+          type: string
+          example: 14.09.2001
+      required:
+        - id
+        - uuid
+        - login
+        - email
+        - telegramId
+        - createdAt
