# transport/http/routes.go
@@ -18,7 +18,7 @@ func (t *Transport) routes() http.Handler {
 		corsMiddleware,
 		t.authMiddleware(true),
 	}
-  
+
 	userMiddlewareGroup := middlewareGroup{
 		t.panicMiddleware,
 		corsMiddleware,
@@ -36,9 +36,12 @@ func (t *Transport) routes() http.Handler {
 	mux.HandleFunc("POST /v1/auth/recovery", defaultMiddlewareGroup.Apply(t.handlerRecovery))
 	mux.HandleFunc("POST /v1/auth/recovery/{code}", defaultMiddlewareGroup.Apply(t.handlerRecoveryCode))
 	mux.HandleFunc("POST /v1/auth/refresh", defaultMiddlewareGroup.Apply(t.handlerRefresh))
-	mux.HandleFunc("POST /v1/auth/telegram", userMiddlewareGroup.Apply(t.handlerTelegramBind))
-	mux.HandleFunc("DELETE /v1/auth/telegram", userMiddlewareGroup.Apply(t.handlerTelegramDelete))
-	mux.HandleFunc("GET /v1/personal-data", userMiddlewareGroup.Apply(t.handlerGetUserData))
-  
+
+	mux.HandleFunc("POST /v1/telegram", userMiddlewareGroup.Apply(t.handlerTelegramBind))
+	mux.HandleFunc("DELETE /v1/telegram", userMiddlewareGroup.Apply(t.handlerTelegramDelete))
+
+	mux.HandleFunc("GET /v1/me/personal-data", userMiddlewareGroup.Apply(t.handlerGetUserPersonalData))
+	mux.HandleFunc("GET /v1/me", userMiddlewareGroup.Apply(t.handlerGetUserData))
+
 	return mux
 }
